--- a/styles/style.css
+++ b/styles/style.css
@@ -105,7 +105,7 @@ section {
 .article-list {
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: stretch;
     align-content: flex-start;
 
@@ -115,14 +115,33 @@ section {
     padding-left: 0;
 }
 
+.article-list > .article-visible {
+    display: none;
+    visibility: hidden;
+    opacity: 0;
+}
+
+.article-list > .article-visible:not(:checked) + .article-item {
+    width: 33%;
+}
+
+.article-list > .article-visible:checked + .article-item {
+    width: 100%;
+}
+
 .article-list > .article-item {
     position: relative;
-    flex-grow: 1;
-    flex-basis: 0;
+    display: inline-flex;
+    flex-direction: column;
+    flex-wrap: wrap;
 
-    width: 33%;
+    margin-bottom: 10px;
 
     transition: width .3s;
+}
+
+.article-list > .article-visible:checked + .article-item {
+    background-color: #858585;
 }
 
 .article-item > .article-label {
@@ -131,23 +150,36 @@ section {
     left: 0;
     width: 100%;
     height: 100%;
-    border: 1px solid black;
+    cursor: pointer;
+    transition: box-shadow .3s;
 }
 
-.article-visible {
-    display: none;
-    visibility: hidden;
-    opacity: 0;
+.article-item > .article-label:hover {
+    box-shadow: 0 0 3px 2px #858585;
+}
+
+.article-item > .article-label:hover + .article {
+    background-color: #858585;
 }
 
 .article-item > .article {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: stretch;
+    align-content: space-between;
+
+    flex: 1;
+
 
     width: 100%;
     padding: 10px;
 
+    transition: background-color .3s;
 }
 
 .article > .article-header {
+    width: 100%;
     margin-bottom: 5px;
 }
 
@@ -161,86 +193,49 @@ section {
 }
 
 .article > .article-picture {
-    width: 100%;
-    height: auto;
-}
+    max-width: 300px;
 
-.article > .article-synopsis {
-
-}
-
-/* End of article-related classes */
-
-.article {
-    float: left;
-    overflow: hidden;
-    padding: 10px;
     transition: width .3s;
 }
 
-.article > .item {
-    position: relative;
-    display: block;
+.-webkit- .article > .article-picture {
+    height: 100%;
+}
+
+.-moz- .article > .article-picture {
+    height: auto;
+    max-height: 450px;
+}
+
+.article-list > .article-visible:checked + .article-item > .article > .article-picture {
+    width: 50%;
+}
+
+.article-list > .article-visible:not(:checked) + .article-item > .article > .article-picture {
     width: 100%;
-    float: left;
-    padding: 10px;
-    cursor: pointer;
-    transition-property: box-shadow;
-    transition-duration: 0.3s;
 }
 
-.article > .item:hover {
-    box-shadow: 0 0 3px 2px #c4c4c4;
-}
-
-.item > .article-title {
-    margin-bottom: 5px;
-}
-
-.article-title > .title {
-    display: inline-block;
+.article > .article-synopsis {
     margin: 0;
-    word-wrap: break-word;
-    word-break: normal;
+    transition: opacity .3s .3s, max-height .3s .3s;
 }
 
-.article-title > .year {
-    display: inline-block;
-    color: #b2b2b2;
-}
-
-.item > img {
-    max-width: 100%;
-    float: left;
-    margin-right: 10px;
-}
-
-.item > p {
-    margin: 0;
-    padding: 10px 0;
-    text-align: justify;
+.article-list > .article-visible:not(:checked) + .article-item > .article > .article-synopsis {
+    visibility: collapse;
+    width: 0;
     opacity: 0;
     max-height: 0;
-    visibility: hidden;
-    transition: opacity .3s .3s
-}
+    transition: max-height;
+ }
 
-.article-visible:checked + .article > .item > p {
-    max-height: inherit;
-    opacity: 1;
+.article-list > .article-visible:checked + .article-item > .article > .article-synopsis {
     visibility: visible;
+    width: 50%;
+    opacity: 1;
+    max-height: 100%;
 }
 
-.poster {
-    float: left;
-    margin: 0;
-}
-
-.poster > img {
-    transition: width 0.3s;
-    width: 191px;
-    height: auto;
-}
+/* End of article-related classes */
 
 .aside {
     float: right;
