Update various sources UPDATE - Using bad ObjectID type in Bookmark.js UPDATE - Added new css rule in style.css to manage Opera Browser NEW - New libraries

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -253,7 +253,8 @@ section {
     height: 100%;
 }
 
-.-moz- .article > .article-picture {
+.-moz- .article > .article-picture,
+.-o- .article > .article-picture {
     height: auto;
     max-height: 450px;
 }
